# deep-research-anatomy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
app/: api.py  container.py  enums.py  main.py  schemas.py  settings.py
app/agents/: _context.py  _state.py  _text.py  base.py  brief.py  compound_researcher.py  compress.py  diffusion.py  react_researcher.py  researcher.py  supervisor.py  think.py  write.py
app/services/: chat_completion.py  research_run.py
scripts/: __init__.py  generate_benchmark_jsonl.py
